--- a/0x06-unittests_in_js/package.json
+++ b/0x06-unittests_in_js/package.json
@@ -3,5 +3,8 @@
         "lint": "./node_modules/.bin/eslint",
         "check-lint": "lint [0-9]*.js",
         "test": "./node_modules/mocha/bin/mocha --require babel-register --exit"
-      }
+    },
+    "dependencies": {
+        "chai": "^4.3.10"
+    }
 }
